# Workshop_Computer

releases/101_pocket_scion/: CMakeLists.txt  README.md  context.md  delay.h  info.yaml  placeholder_spatial.h  pocket_scion.cpp  reverb_dsp.c  usb_midi_host.c  usb_midi_host.h
releases/83_plant_holder/: .gitignore  CMakeLists.txt  README.md  context.md  info.yaml  placeholder_reverb.h  plant_holder.cpp  tusb_config.h  usb_midi_host.c  usb_midi_host.h
